src/objects/n2de__Distribution_team_alert__c.object
<CustomObject>
    <description>Team alerts</description>
    <fields>
        <fullName>n2de__Alert_condition_argument__c</fullName>
        <label>Alert condition argument</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Alert_condition_field_name__c</fullName>
        <label>Alert condition field name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Alert_condition_field_type__c</fullName>
        <label>Alert condition field type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Alert_condition_operator__c</fullName>
        <label>Alert condition operator</label>
        <picklist>
            <picklistValues>
                <fullName>equals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>not equal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>less than</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>greater than</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>less or equal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>greater or equal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>n2de__Alert_datetime_field__c</fullName>
        <description>DateTime field used to test if distribution is in alert</description>
        <inlineHelpText>If the DateTime in the field has passed, distribution will be put into alert</inlineHelpText>
        <label>Alert datetime field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Alert_period__c</fullName>
        <label>Alert period</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>n2de__Alert_sequence__c</fullName>
        <inlineHelpText>Alerts on distribution: If the alert period (from time of distribution) has passed and the condition is found to be true an alert will be raised. Alerts must be entered in the sequence they will occur.</inlineHelpText>
        <label>Alert sequence</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>n2de__Alert_unit__c</fullName>
        <label>Alert unit</label>
        <picklist>
            <picklistValues>
                <fullName>Minutes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Days</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>n2de__Team__c</fullName>
        <label>Distribution team</label>
        <referenceTo>n2de__Team__c</referenceTo>
        <relationshipLabel>Distribution team alerts</relationshipLabel>
        <relationshipName>Distribution_team_alerts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Distribution team alert</label>
    <nameField>
        <label>Alert Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Distribution team alerts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>